--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         display: grid;
         place-items: center;
         text-align: center;
-        background: linear-gradient(150deg, #70b416, #167fb4, #b46516);
+        /* background: linear-gradient(150deg, #70b416, #167fb4, #b46516); */
         background-size: 180% 180%;
         animation: gradient-animation 3s ease infinite;
       }
