--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>WeightMate</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-signin-client_id" content="60993485374-ivmnsdeuqvsp54pol5ra1vqthd5sm25e.apps.googleusercontent.com">
   <link rel="icon" type="image/x-icon" href="./assets/logo.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
